fix white space removal in model's output

--- a/components/Message.module.css
+++ b/components/Message.module.css
@@ -47,6 +47,7 @@
     padding: 1rem 1.35rem;
     border-radius: 0.5rem;
     background-color: var(--secondary-background-color);
+    white-space: pre-wrap;
 }
 
 @media only screen and (max-width: 768px) {
